# ssologinlite

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: rust.yml
src/: aws_credentials.rs  aws_profile.rs  aws_sso_credentials.rs  aws_sso_registration.rs  cache.rs  config.rs  constants.rs  eks.rs  file_helper.rs  lib.rs  logger.rs  main.rs  mywebbrowser.rs  parser.rs  tui.rs
