[package]
name = "ssologinlite"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
aws-sdk-sts = "1.39.0"
aws-sdk-sso = "1.39.0"
aws-sdk-ssooidc = "1.39.0"
aws-types = "1.3.3"
aws-smithy-types = "1.2.2"
aws-config = "1.5.5"
aws-smithy-types-convert = { version = "0.60.2", features = ["convert-chrono"] }

serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
log = "0.4.22"
log4rs = "1.3.0"
anyhow = "1.0.86"
chrono = "0.4.38"

time = "0.3.36"
glob = "0.3.1"
pickledb = "0.5.1"
clap = { version = "4.5.16", features = ["derive"] }
rust-ini = "0.21.1"
home = "0.5.9"
webbrowser = "1.0.1"
rand = "0.8.5"
sha1_smol = "1.0.1"
whoami = "1.5.2"
config = "0.14.0"
hmac = "0.12.1"
sha2 = "0.10.8"
url-search-params = "12.0.0"
base64 = "0.22.1"

[profile.release]
strip = 'symbols'
# opt-level = "s"
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 'z'
